--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <title>React App</title>
+    <title>Task Follow-Up</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
